# mesh_fit

./: .gitignore  requirements.txt
assets/: female_0.glb
assets/female_1/: femail_1_01.xcf
crates/: Cargo.toml
crates/.cargo/: config.toml
crates/blender_shims/: CMakeLists.txt  Cargo.toml  build.rs
crates/blender_shims/src/: lib.rs
crates/blender_shims/src-cpp/: armature.cpp  armature.h  blender_shim.cpp  blender_shim.h  utils.cpp  utils.h
crates/main/: Cargo.toml
crates/main/src/: main.rs  mask.rs  mod_net.rs  test.rs  train.rs
crates/main/src/onnx/: mod.rs  rtm_det.rs  rtm_w3d.rs  rtmw3d_armature.rs  run_onnx.rs
crates/mesh_train/: Cargo.toml
crates/mesh_train/src/: main.rs  mask.rs  train.rs
crates/shared/: Cargo.toml
crates/shared/src/: armature.rs  lib.rs
data/views/000/: meta.json  pose2d_33.npy
data/views/001/: meta.json  pose2d_33.npy
data/views/002/: meta.json  pose2d_33.npy
data/views/003/: meta.json  pose2d_33.npy
data/views/004/: meta.json  pose2d_33.npy
data/views/005/: meta.json  pose2d_33.npy
python/: gen_armature.py  test.py
tools/: .prepare_views.py.swp  extract_kp.py  prepare_views.py
