[package]
name = "mesh_train"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
gltf = { version = "1", features = ["import"] }
hf-hub = "0.4"
image = "0.25"
ndarray = "0.16"
ndarray-npy = "0.9"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tch = "0.20"

candle = { package = "candle-core", version = "0.9.2", features = ["cuda"] }
candle-nn = { version = "0.9.2", features = ["cuda"] }
candle-transformers = { version = "0.9.2", features = ["cuda"] }
candle-examples = { version = "0.9.2", features = ["cuda"] }
